clusters/k4/kubernetes/apps/kube-system/spegel/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: spegel
spec:
  endpointSelector:
    matchLabels: &labels
      app.kubernetes.io/instance: spegel
  ingress:
    - fromEndpoints:
        - matchLabels: *labels
  egress:
    - toEndpoints:
        - matchLabels: *labels
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            # Kubelet
            - port: "10250"
              protocol: TCP
